fixed spacing

--- a/assets/sass/components/_components.scss
+++ b/assets/sass/components/_components.scss
@@ -53,6 +53,7 @@ section {
     }
 
     h2 {
+        margin-top: 8px;
         color: $dark-blue;
         font-size: 1em;
         font-weight: 700;
