--- a/assets/sass/sections/_about-us.scss
+++ b/assets/sass/sections/_about-us.scss
@@ -1,4 +1,5 @@
 section#about-us {
+	padding-top: 166px;
 	padding-bottom: 5%;
 
     div {
@@ -13,7 +14,7 @@ section#about-us {
         }
 
         p {
-            margin: 5% 0;
+            margin: 2em 0;
             color: $light-gray;
         }
     }
