--- a/assets/sass/sections/_hero.scss
+++ b/assets/sass/sections/_hero.scss
@@ -15,10 +15,11 @@ section#hero {
 
     h1 {
         font-size: 3em;
+        line-height: 57.6px;
     }
 
     p {
-        margin: 2% 15%;
+        margin: 1em 15% 2em;
         font-size: 1.2em;
         font-weight: 400;
     }
