--- a/assets/sass/sections/_services.scss
+++ b/assets/sass/sections/_services.scss
@@ -1,6 +1,7 @@
 section#services {
     padding-left: 7.5%;
     padding-right: 7.5%;
+    padding-bottom: 0;
     background: url('../img/services-bg.png');
 
     h1,
@@ -9,7 +10,7 @@ section#services {
     }
 
     p {
-        margin: 1% 20% 0;
+        margin: 1em 20% 40px;
         color: $light-gray;
         font-weight: 700;
         text-align: center;
@@ -19,15 +20,15 @@ section#services {
     div.flex {
         div.card {
             flex: 20%;
-            margin: 5% 1.25%;
-            padding: 5% 1.25% 1.25%;
+            margin: 0 1.125% 32px;
+            padding: 1em;
             border-radius: 4px;
             background: white;
             cursor: pointer;
             transition: 0.3s ease-in-out;
 
             img {
-                margin-bottom: 5%;
+                margin-bottom: 1em;
                 padding: 2.5%;
                 border: 1px solid $cyan;
                 border-radius: 4px;
@@ -41,10 +42,10 @@ section#services {
             }
 
             p {
-                margin: 10% 0 5%;
+                margin: 1em 0 24px;
                 color: $light-gray;
                 font-size: 0.875em;
-                font-weight: 700;
+                font-weight: 400;
                 text-align: left;
             }
 
